--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="heading" id="home">
         <div class="grid wide">
             <!-- Navigation -->
-            <div class="row ">
+            <div class="row navigation">
                 <div class="col xl-3 md-6 sm-6 heading__logo-mb-tbl">
                     <div class="heading__logo">
                         <i class="fa-brands fa-pied-piper-alt"></i>
@@ -39,7 +39,7 @@
                             <a href="#blog" class="navbar__item-link">Blog</a>
                         </li>
                         <li class="navbar__item">
-                            <a href="#" class="navbar__item-link">Pricing</a>
+                            <a href="#price" class="navbar__item-link">Pricing</a>
                         </li>
                     </ul>
                     <!-- Icon list Mobile + tablet -->
@@ -100,13 +100,13 @@
                             <div class="col xl-2-4 md-6">
                                 <div class="booking__content">
                                     <p class="booking__content-head">Checkin</p>
-                                    <input type="datetime" placeholder="">
+                                    <input type="text" placeholder="">
                                 </div>
                             </div>
                             <div class="col xl-2-4 md-6">
                                 <div class="booking__content">
                                     <p class="booking__content-head">Checkout</p>
-                                    <input type="datetime" placeholder="">
+                                    <input type="text" placeholder="">
                                 </div>
                             </div>
                             <div class="col xl-2-4 md-4 submit-book-wrap">
@@ -446,6 +446,209 @@
             </div>
         </div>
     </div>
+
+    <div class="trip__planers" id="price">
+        <div class="grid wide">
+            <div class="row">
+                <div class="col xl-4 md-12 sm-12">
+                    <div class="trip__planers-heading">
+                        <h1 class="trip__planers-title">Trip Planers</h1>
+                        <hr width="150px" color="#FF7757">
+                        <p class="trip__planers-content">
+                            20 years from now you will be more 
+                            disappointed by the things that you 
+                            didn’t do. Stop regretting and start 
+                            travelling, start throwing off the bowlines.
+                        </p>
+
+                        <div class="trip__planers-btn">
+                            <p>View all trip plans</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col xl-8 md-12 sm-12">
+                    <div class="row trip__planers-card-wrap">
+                        <div class="col xl-4 md-6 sm-12">
+                            <div class="trip__planers-img"
+                            style="background-image: url(assets/img/ta-xua.jpg);">
+                                <div class="trip__planers-info">
+                                    <div class="trip__planers-info-header">
+                                        <p>guide tour</p>
+                                        <span>€95/Day</span>
+                                    </div>
+                                    <h3 class="trip__planers-info-name">Viet Nam tour</h3>
+                                    <ul class="trip__planers-info-rating">
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col xl-4 md-6 sm-12">
+                            <div class="trip__planers-img"
+                            style="background-image: url(assets/img/thac-ban-gioc2.jpg);">
+                                <div class="trip__planers-info">
+                                    <div class="trip__planers-info-header">
+                                        <p>guide tour</p>
+                                        <span>€95/Day</span>
+                                    </div>
+                                    <h3 class="trip__planers-info-name">Viet Nam tour</h3>
+                                    <ul class="trip__planers-info-rating">
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col xl-4 md-6 sm-12">
+                            <div class="trip__planers-img"
+                            style="background-image: url(assets/img/canh-dep-viet-nam-12.jpg);">
+                                <div class="trip__planers-info">
+                                    <div class="trip__planers-info-header">
+                                        <p>guide tour</p>
+                                        <span>€95/Day</span>
+                                    </div>
+                                    <h3 class="trip__planers-info-name">Viet Nam tour</h3>
+                                    <ul class="trip__planers-info-rating">
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col xl-4 md-6 sm-12">
+                            <div class="trip__planers-img"
+                            style="background-image: url(assets/img/Hinh-nen-Ha-Noi-ve-dem-ben-Ho-Guom.jpg);">
+                                <div class="trip__planers-info">
+                                    <div class="trip__planers-info-header">
+                                        <p>guide tour</p>
+                                        <span>€95/Day</span>
+                                    </div>
+                                    <h3 class="trip__planers-info-name">Viet Nam tour</h3>
+                                    <ul class="trip__planers-info-rating">
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col xl-4 md-6 sm-12">
+                            <div class="trip__planers-img"
+                            style="background-image: url(assets/img/Vietnam-4K-Wallpapers.jpg);">
+                                <div class="trip__planers-info">
+                                    <div class="trip__planers-info-header">
+                                        <p>guide tour</p>
+                                        <span>€95/Day</span>
+                                    </div>
+                                    <h3 class="trip__planers-info-name">Viet Nam tour</h3>
+                                    <ul class="trip__planers-info-rating">
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col xl-4 md-6 sm-12">
+                            <div class="trip__planers-img"
+                            style="background-image: url(assets/img/hinh-nen-viet-nam-4k-cho-dien-thoai-1-inkythuatso-08-14-10-45.jpg);">
+                                <div class="trip__planers-info">
+                                    <div class="trip__planers-info-header">
+                                        <p>guide tour</p>
+                                        <span>€95/Day</span>
+                                    </div>
+                                    <h3 class="trip__planers-info-name">Viet Nam tour</h3>
+                                    <ul class="trip__planers-info-rating">
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star star__active">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                        <li class="trip__planers-info-rating-star">
+                                            <i class="fa-solid fa-star"></i>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="destination__gallery">
         <div class="grid wide">
             <div class="row ">
@@ -459,7 +662,7 @@
             </div>
             <div class="row gallery__img-wrap">
                 <div class="col xl-3 md-6 sm-12 ">
-                    <div class="gallery__img" style="background-image: url(assets/img/guess.jpg);"></div>
+                    <div class="gallery__img" style="background-image: url(assets/img/khach-du-lich-han-quoc-2.jpg);"></div>
                 </div>
                 <div class="col xl-3 md-6 sm-12">
                     <div class="gallery__img" style="background-image: url(assets/img/guess1.jpg);"></div>
