--- a/index.html
+++ b/index.html
@@ -699,6 +699,239 @@
         </div>
     </div>
 
+    <div class="traveler">
+        <div class="grid wide">
+            <div class="row">
+                <div class="traveler__heading">
+                    <h1 class="traveler__heading-header">Traveler’s Experiences</h1>
+                    <hr width="240px" color="#FF7757">
+                    <p>Here some awesome feedback from our travelers</p>
+                </div>
+            </div>
+            <div class="row traveler__card-wrap">
+                <div class="col xl-5 md-8 sm-12">
+                    <div class="traveler__card">
+                        <div class="traveler__card-content">
+                            <div class="traveler__card-avt" style="background-image: url(assets/img/me.jpg);"></div>
+                            <p class="traveler__card-content-text">
+                                But I must explain to you how all this mistaken 
+                                idea of denouncing pleasure and praising pain was 
+                                born and I will give you a complete account of the 
+                                system and expound the actual teachings of the great 
+                                explorer of the truth, the master- builder of human happiness.
+                            </p>
+                            <ul class="traveler__card-rating">
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                            </ul>
+                            <h3 class="traveler__card-name">Ng Vanh</h3>
+                            <p class="traveler__card-account">Accountant</p> 
+                        </div>
+                    </div>
+                </div>
+                <div class="col xl-5 md-8 sm-12">
+                    <div class="traveler__card">
+                        <div class="traveler__card-content">
+                            <div class="traveler__card-avt" style="background-image: url(assets/img/me.jpg);"></div>
+                            <p class="traveler__card-content-text">
+                                But I must explain to you how all this mistaken 
+                                idea of denouncing pleasure and praising pain was 
+                                born and I will give you a complete account of the 
+                                system and expound the actual teachings of the great 
+                                explorer of the truth, the master- builder of human happiness.
+                            </p>
+                            <ul class="traveler__card-rating">
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                            </ul>
+                            <h3 class="traveler__card-name">Ng Vanh</h3>
+                            <p class="traveler__card-account">Accountant</p> 
+                        </div>
+                    </div>
+                </div>
+                <div class="col xl-5 md-8 sm-12">
+                    <div class="traveler__card">
+                        <div class="traveler__card-content">
+                            <div class="traveler__card-avt" style="background-image: url(assets/img/me.jpg);"></div>
+                            <p class="traveler__card-content-text">
+                                But I must explain to you how all this mistaken 
+                                idea of denouncing pleasure and praising pain was 
+                                born and I will give you a complete account of the 
+                                system and expound the actual teachings of the great 
+                                explorer of the truth, the master- builder of human happiness.
+                            </p>
+                            <ul class="traveler__card-rating">
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                            </ul>
+                            <h3 class="traveler__card-name">Ng Vanh</h3>
+                            <p class="traveler__card-account">Accountant</p> 
+                        </div>
+                    </div>
+                </div>
+                <div class="col xl-5 md-8 sm-12">
+                    <div class="traveler__card">
+                        <div class="traveler__card-content">
+                            <div class="traveler__card-avt" style="background-image: url(assets/img/me.jpg);"></div>
+                            <p class="traveler__card-content-text">
+                                But I must explain to you how all this mistaken 
+                                idea of denouncing pleasure and praising pain was 
+                                born and I will give you a complete account of the 
+                                system and expound the actual teachings of the great 
+                                explorer of the truth, the master- builder of human happiness.
+                            </p>
+                            <ul class="traveler__card-rating">
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                            </ul>
+                            <h3 class="traveler__card-name">Ng Vanh</h3>
+                            <p class="traveler__card-account">Accountant</p> 
+                        </div>
+                    </div>
+                </div>
+                <div class="col xl-5 md-8 sm-12">
+                    <div class="traveler__card">
+                        <div class="traveler__card-content">
+                            <div class="traveler__card-avt" style="background-image: url(assets/img/me.jpg);"></div>
+                            <p class="traveler__card-content-text">
+                                But I must explain to you how all this mistaken 
+                                idea of denouncing pleasure and praising pain was 
+                                born and I will give you a complete account of the 
+                                system and expound the actual teachings of the great 
+                                explorer of the truth, the master- builder of human happiness.
+                            </p>
+                            <ul class="traveler__card-rating">
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star star__active">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                                <li class="traveler__card-star">
+                                    <i class="fa-solid fa-star"></i>
+                                </li>
+                            </ul>
+                            <h3 class="traveler__card-name">Ng Vanh</h3>
+                            <p class="traveler__card-account">Accountant</p> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <footer class ="footer">
+        <div class="grid wide">
+            <div class="row footer-wrap">
+                <div class="col xl-4 md-6 sm-12 footer__logo-wrap">
+                    <div class="footer__logo">
+                        <i class="fa-brands fa-pied-piper-alt"></i>
+                        <h3 class="footer__logo-name">Travellian</h3>
+                    </div>
+                    <p class="footer__copy-right">Copyright © Travellian 2020 All rights reserved</p>
+                </div>
+                <div class="col xl-4 md-6 sm-12 footer__contact-info">
+                    <h3 class="footer__contact-header">Contact Info</h3>
+                    <ul class="footer__contact-list">
+                        <li class="footer__contact-item item__number-phone">
+                            <span>0904298243</span>
+                        </li>
+                        <li class="footer__contact-item item__mail">
+                            <span>anhnv22.work@gmail.com</span>
+                        </li>
+                        <li class="footer__contact-item item__address">
+                            <span>Hải Dương, Việt Nam</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col xl-4 md-6 sm-12 footer__contact-icon">
+                    <h3 class="footer__icon-header">Follow me on</h3>
+                    <ul class="footer__icon-list">
+                        <li class="footer__icon-item">
+                            <a target="_blank" href="https://www.facebook.com/vanh.22.34">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li class="footer__icon-item">
+                            <a target="_blank" href="">
+                                <i class="fa-brands fa-square-instagram"></i>
+                            </a>
+                        </li>
+                        <li class="footer__icon-item">
+                            <a target="_blank" href="">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li class="footer__icon-item">
+                            <a target="_blank" href="https://github.com/Ng-Vanh">
+                                <i class="fa-brands fa-square-github"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>                
+            </div>
+        </div>
+    </footer>
+
     <script src="assets/javascript/main.js"></script>
 </body>
 </html>
